--- a/style.css
+++ b/style.css
@@ -141,6 +141,13 @@ body {
     color: white;
 }
 
+.menu-item.active img {
+    filter: brightness(0) invert(1);
+}
+.menu-item:hover img {
+    filter: brightness(0) invert(1);
+}
+
 .main {
     @apply pl-[14rem] xl:pl-[17.5rem] 2xl:pl-[18rem] h-[calc(100vh-3.5rem)] xl:h-[calc(100vh-4rem)] 2xl:h-[calc(100vh-5rem)] mt-14 xl:mt-16 2xl:mt-20 pr-4 xl:pr-6 2xl:pr-8;
     padding-top: 1rem;
@@ -289,14 +296,14 @@ input.is-invalid {
 
 @media screen and (max-width: 1600px) {
     html {
-        font-size: 95%;
+        font-size: 80%;
     }
 }
-@media screen and (max-width: 1500px) {
+/* @media screen and (max-width: 1500px) {
     html {
-        font-size: 90%;
+        font-size: 80%;
     }
-}
+} */
 @media screen and (max-width: 1400px) {
     html {
         font-size: 70%;
